# clinometer

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
clinometer/: __init__.py  clinometer.c  clinometer.html  clinometer.pyx
